--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,24 @@
+# Spring MVC Config
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
+
+# Spring DataSource Config
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/testdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username = test
 spring.datasource.password = test
 
+# Spring Data JPA Config (with hibernate)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-#spring.h2.console.enabled = true
-#spring.datasource.url = jdbc:h2:mem:testdb
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+# Mybatis Config
+mybatis.config-location = classpath:mybatis/mybatis-config.xml
+mybatis.mapper-locations = classpath:mybatis/mapper/*Mapper.xml
+mybatis.type-aliases-package = com.example.employee.dao
+logging.level.com.example.employee.dao.mapper = debug
